[tool.poetry]
name = "brave-tunedglobal"
version = "0.1.0"
description = ""
authors = ["Mariusz Smenżyk <mariusz@bravelab.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.0.0"
requests = "^2.0.0"
openai = "0.27.0"
python-dotenv = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "brave_tunedglobal:app.run"
